# path-fm-dinov3

./: .gitignore  HEST_evaluation.py  README.md  build_teacher_checkpoint.py  install.sh  pyproject.toml  run_1gpu.sh  run_1node.sh  run_8gpus.sh
dinov3/configs/: ssl_default_config.yaml
dinov3/configs/train/: vith16plus.yaml  vith16plus_1gpu.yaml  vith16plus_8gpus.yaml  vith16plus_8gpus_localsvs.yaml
dinov3/cplearn/: README.md
dinov3/data/datasets/: slide_dataset.py
dinov3/layers/: __init__.py  cplearn_projector.py
dinov3/train/: ssl_meta_arch.py  train.py
eval_configs/: bach.yaml  bracs.yaml  breakhist.yaml  cam16_small.yaml  consep.yaml  crc.yaml  gleason_offline.yaml  mhist.yaml  monusac.yaml  panda_small.yaml  pcam_10.yaml
